--- a/index.html
+++ b/index.html
@@ -14,10 +14,24 @@
     </head>
     <body>
         <script src="app.jss"></script>
-        <h1>BAYwatch<h1>
-        <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-        
+        <div class="grid-x">
+            <div class="medium-8 medium-offset-2 
+            cell">
+                <h1>BAYwatch</h1>
+                <form id="flick-form"> 
+                    <div class="input-group">
+                        <input 
+                            type="text" 
+                            class="input-group-field"
+                            name="flickName"
+                            placeholder="Name a Bay flick!"
+                        >  
+                        <div class="input-group-button">
+                        <button type="submit" class="success button"> Add flick </button>    
+                        </div>  
+                    </div>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
