Add a delete and favorite button without functions

--- a/index.html
+++ b/index.html
@@ -1,37 +1,45 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>Michael Baywatch</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="app.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
-    </head>
-    <body>
-        <script src="app.jss"></script>
-        <div class="grid-x">
-            <div class="medium-8 medium-offset-2 
-            cell">
-                <h1>BAYwatch</h1>
-                <form id="flick-form"> 
-                    <div class="input-group">
-                        <input 
-                            type="text" 
-                            class="input-group-field"
-                            name="flickName"
-                            placeholder="Name a Bay flick!"
-                        >  
-                        <div class="input-group-button">
-                        <button type="submit" class="success button"> Add flick </button>    
-                        </div>  
-                    </div>
-                </form>
+<html class="no-js">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Michael Baywatch</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
+    <link rel="stylesheet" href="app.css">
+  </head>
+  <body>
+    <div class="grid-x">
+      <div class="medium-8 medium-offset-2 cell">
+        <h1>Baywatch</h1>
+        <form id="flick-form">
+          <div class="input-group">
+            <input
+              type="text"
+              class="input-group-field"
+              name="flickName"
+              placeholder="Name a flick"
+            >
+            <div class="input-group-button">
+              <button
+                class="success button"
+                type="submit"
+              >
+                Add flick
+              </button>
             </div>
-        </div>
-    </body>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <div class="grid-x">
+      <div class="medium-8 medium-offset-2 cell">
+        <ul id="flick-list"></ul>
+      </div>
+    </div>
+
+    <script src="app.js"></script>
+  </body>
 </html>
