Handled up and down buttons, adjusting array but couldn't make it on the page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="grid-x">
       <div class="medium-8 medium-offset-2 cell">
-        <h1>BAYWATCH</h1>
+        <h1><BAYWATCH</h1>
         <form id="flick-form">
           <div class="input-group">
             <input
