--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
     <link rel="stylesheet" href="app.css">
-    <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;lang=en" />
   </head>
   <body>
     <div class="grid-x">
       <div class="medium-8 medium-offset-2 cell">
-        <h1><BAYWATCH</h1>
+        <h1>BAYWATCH</h1>
         <form id="flick-form">
           <div class="input-group">
             <input
