Added autofocus and cleared field after each flick, added checking for empty flick entries

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
               type="text"
               class="input-group-field"
               name="flickName"
+              autofocus
               placeholder="Name a flick"
             >
             <div class="input-group-button">
