Added save all and clear list buttons, no functionality

--- a/index.html
+++ b/index.html
@@ -29,6 +29,17 @@
               >
                 Add flick
               </button>
+              <button class="warning button"
+                      id="saveall" 
+                      >
+                      Save
+            </button>
+            <button 
+                class="button alert"
+                id="clearall"
+                >
+                Clear list
+              </button>
             </div>
           </div>
         </form>
