--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
     <link rel="stylesheet" href="app.css">
   </head>
-  <body>
+  <body onload="startup()">
+    <script>
+      function startup() {
+        Storage.prototype.getObject = function(key) {
+      return JSON.parse(this.getItem(key));
+      }
+        var load = getObject("list")
+        var flick = document.querySelector('#flick-list')
+        flick.appendChild(load)
+      }
+      </script>
     <div class="grid-x">
       <div class="medium-8 medium-offset-2 cell">
         <h1>BAYWATCH</h1>
@@ -23,23 +33,28 @@
               placeholder="Name a flick"
             >
             <div class="input-group-button">
-              <button
+              <a
                 class="success button"
                 type="submit"
               >
                 Add flick
-              </button>
-              <button class="warning button"
+              </a>
+              <a 
+                class="button primary"
+                >
+              Search
+              </a>
+              <a class="warning button"
                       id="saveall" 
                       >
                       Save
-            </button>
-            <button 
+            </a>
+            <a 
                 class="button alert"
                 id="clearall"
                 >
                 Clear list
-              </button>
+              </a>
             </div>
           </div>
         </form>
