Added event listener to search button

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
               </a>
               <a 
                 class="button primary"
+                id="searchall"
                 >
               Search
               </a>
